--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "@headlessui/react": "^1.7.15",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^5.0.0",
-    "@tailwindcss/forms": "^0.5.4",
-    "@types/node": "20.4.4",
-    "@types/react": "18.2.15",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.33",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -37,13 +36,16 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-loading-skeleton": "^3.2.1",
     "react-select": "^5.7.4",
     "react-spinners": "^0.13.8",
+    "superjson": "^1.12.3",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
+    "typescript": "5.0.4",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.4",
     "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.196",
     "prisma": "^5.0.0"
